deployments/quotes-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-v1
  labels:
    app: quotes
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quotes
      version: v1
  template:
    metadata:
      labels:
        app: quotes
        version: v1
    spec:
      containers:
      - name: quotes
        image: thatoppsdev/quotes-app:v3
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: quotes
  labels:
    app: quotes
spec:
  selector:
    app: quotes
  ports:
  - name: http # 👈 THIS IS IMPORTANT
    port: 80
    targetPort: 80
